syntax = "proto3";
package common;

import "global_import.proto";

option go_package = "card-game-server-prototype/pkg/grpc/commongrpc";
option csharp_namespace = "Joker.Gameplay.Grpc.Models";
option (csharp_assembly) = "Joker.Gameplay.Common";
option (csharp_access) = public;

message StickerRequest {
  int32 stickerId = 1;
}

message Sticker {
  string uid = 1;
  int32 stickerId = 2;
}

message EmotePingRequest{
  int32 itemId = 1;
  string target_uid = 2;
}

message EmotePing{
  int32 itemId = 1;
  string sender_uid = 2;
  string target_uid = 3;
}

message EmoteEvent {
  optional EmotePing emotePing = 1;
  optional Sticker sticker = 2;
}